fix: scrollbars

--- a/style.css
+++ b/style.css
@@ -341,3 +341,14 @@ main .center .post .interactions .grid-box .custom-btn:hover {
     }
 
 }
+
+*::-webkit-scrollbar {width: 8px; height: 8px;}
+*::-webkit-scrollbar-track {background: transparent;}
+*::-webkit-scrollbar-thumb {
+    background-color: #323232;
+    border-radius: 999px;
+
+}
+*::-webkit-scrollbar-thumb:hover {
+    background: #505050;
+}
